Adequação de alguns requisitos

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-     
-     <div class="container">
+       <div class="container">
        <div style="text-align:center; margin: 50px 0px;">
         <h1 class="titulo">Jogo da Forca</h1> <br></br>
      <div style="text-align:center">
@@ -26,48 +25,48 @@
                 <div class="layout-letras">F</div> -->
                 <br></br>
         </div>
-        <span class="letras-incorretas"></span>
-   
-    <div class="teclas">
-      <button id="tecla-A" onclick="letraEscolhida('A')">A</button>
-      <button id="tecla-B" onclick="letraEscolhida('B')">B</button>
-      <button id="tecla-C" onclick="letraEscolhida('C')">C</button>
-      <button id="tecla-D" onclick="letraEscolhida('D')">D</button>
-      <button id="tecla-E" onclick="letraEscolhida('E')">E</button>
-      <button id="tecla-F" onclick="letraEscolhida('F')">F</button>
-      <button id="tecla-G" onclick="letraEscolhida('G')">G</button>
-      <button id="tecla-H" onclick="letraEscolhida('H')">H</button>
-      <button id="tecla-I" onclick="letraEscolhida('I')">I</button>
-      <br>
-      <button id="tecla-J" onclick="letraEscolhida('J')">J</button>
-      <button id="tecla-K" onclick="letraEscolhida('K')">K</button>
-      <button id="tecla-L" onclick="letraEscolhida('L')">L</button>
-      <button id="tecla-M" onclick="letraEscolhida('M')">M</button>
-      <button id="tecla-N" onclick="letraEscolhida('N')">N</button>
-      <button id="tecla-O" onclick="letraEscolhida('O')">O</button>
-      <button id="tecla-P" onclick="letraEscolhida('P')">P</button>
-      <button id="tecla-Q" onclick="letraEscolhida('Q')">Q</button>
-      <button id="tecla-R" onclick="letraEscolhida('R')">R</button>
-      <br>
-      <button id="tecla-S" onclick="letraEscolhida('S')">S</button>
-      <button id="tecla-T" onclick="letraEscolhida('T')">T</button>
-      <button id="tecla-U" onclick="letraEscolhida('U')">U</button>
-      <button id="tecla-V" onclick="letraEscolhida('V')">V</button>
-      <button id="tecla-W" onclick="letraEscolhida('W')">W</button>
-      <button id="tecla-X" onclick="letraEscolhida('X')">X</button>
-      <button id="tecla-Y" onclick="letraEscolhida('y')">Y</button>
-      <button id="tecla-Z" onclick="letraEscolhida('Z')">Z</button>
-      <br></br>
-    </div>
+        <div class="letras-incorretas"></div>
+        <h2></h2>
+
+       <div class="teclas">
+        <button id="tecla-A" onclick="letraEscolhida('A')">A</button>
+        <button id="tecla-B" onclick="letraEscolhida('B')">B</button>
+        <button id="tecla-C" onclick="letraEscolhida('C')">C</button>
+        <button id="tecla-D" onclick="letraEscolhida('D')">D</button>
+        <button id="tecla-E" onclick="letraEscolhida('E')">E</button>
+        <button id="tecla-F" onclick="letraEscolhida('F')">F</button>
+        <button id="tecla-G" onclick="letraEscolhida('G')">G</button>
+        <button id="tecla-H" onclick="letraEscolhida('H')">H</button>
+        <button id="tecla-I" onclick="letraEscolhida('I')">I</button>
+        <br>
+        <button id="tecla-J" onclick="letraEscolhida('J')">J</button>
+        <button id="tecla-K" onclick="letraEscolhida('K')">K</button>
+        <button id="tecla-L" onclick="letraEscolhida('L')">L</button>
+        <button id="tecla-M" onclick="letraEscolhida('M')">M</button>
+        <button id="tecla-N" onclick="letraEscolhida('N')">N</button>
+        <button id="tecla-O" onclick="letraEscolhida('O')">O</button>
+        <button id="tecla-P" onclick="letraEscolhida('P')">P</button>
+        <button id="tecla-Q" onclick="letraEscolhida('Q')">Q</button>
+        <button id="tecla-R" onclick="letraEscolhida('R')">R</button>
+        <br>
+        <button id="tecla-S" onclick="letraEscolhida('S')">S</button>
+        <button id="tecla-T" onclick="letraEscolhida('T')">T</button>
+        <button id="tecla-U" onclick="letraEscolhida('U')">U</button>
+        <button id="tecla-V" onclick="letraEscolhida('V')">V</button>
+        <button id="tecla-W" onclick="letraEscolhida('W')">W</button>
+        <button id="tecla-X" onclick="letraEscolhida('X')">X</button>
+        <button id="tecla-Y" onclick="letraEscolhida('Y')">Y</button>
+        <button id="tecla-Z" onclick="letraEscolhida('Z')">Z</button>
+        <br></br>
+     </div>
       <button id="btnReiniciar">Jogar Novamente</button>
-      <div>
-      </div>
+      
     <div>
-      <canvas id="forca" width="900px "height="500px"></canvas>
+      <canvas id="forca" width="900px "height="400px"></canvas>
     </div>
   
      <footer class="rdp">
-        <h6>Ataize Feitosa | @ 2022 | Challenge - ONE - Alura</h6>
+        <h6>&copy Ataize Feitosa | 2022 | Challenge - ONE - Alura</h6>
     </footer>
   </div>
     <script type="text/javascript" src="canvas.js"></script>
