--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
        <div class="container">
        <div style="text-align:center; margin: 50px 0px;">
         <h1 class="titulo">Jogo da Forca</h1> <br></br>
-     <div style="text-align:center">
+<!--      <div style="text-align:center">
       <input class="text-input" type="text" id="input-nova-palavra" placeholder="Escreva uma nova palavra">
       <button class="btn" id="nova-palavra">ADICIONAR PALAVRA</button> 
-    </div>
+    </div> -->
         <h3>Tente Descobrir a Palavra Secreta</h3>
         <div id="palavra-secreta">
                <!-- <div class="layout-letras">A</div>
